--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-10 10:45:30
-# Total rules: 12282
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-11 09:03:03
+# Total rules: 12286
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -8,7 +8,6 @@
 .0gc6y58nkk.data.adobedc.net
 .0lovespells0.blogspot.com
 .0m1hix10po.data.adobedc.net
-.0m217fplbh.data.adobedc.net
 .0nvdw1kkeb.data.adobedc.net
 .0x00000000000.substack.com
 .1.66law.cn
@@ -466,7 +465,6 @@
 .a21625780072.cdn.optimizely.com
 .a21630000199.cdn.optimizely.com
 .a21645491094.cdn.optimizely.com
-.a21711352012.cdn.optimizely.com
 .a21711432014.cdn.optimizely.com
 .a21723500485.cdn.optimizely.com
 .a21729970583.cdn.optimizely.com
@@ -762,7 +760,6 @@
 .a26310890636.cdn.optimizely.com
 .a26326341062.cdn.optimizely.com
 .a26330300728.cdn.optimizely.com
-.a26334390584.cdn.optimizely.com
 .a26334950855.cdn.optimizely.com
 .a26349430206.cdn.optimizely.com
 .a26412040784.cdn.optimizely.com
@@ -862,6 +859,7 @@
 .a28789770007.cdn.optimizely.com
 .a28810310281.cdn.optimizely.com
 .a28826650685.cdn.optimizely.com
+.a28861330358.cdn.optimizely.com
 .a28901180531.cdn.optimizely.com
 .a28930870021.cdn.optimizely.com
 .a2900460605.cdn.optimizely.com
@@ -990,7 +988,6 @@
 .a4706980296654848.cdn.optimizely.com
 .a4768898554265600.cdn.optimizely.com
 .a47b-collector-eu-alb-1031015564.eu-west-1.elb.amazonaws.com
-.a4804167382859776.cdn.optimizely.com
 .a4806508815319040.cdn.optimizely.com
 .a4808268718538752.cdn.optimizely.com
 .a48120048.cdn.optimizely.com
@@ -1008,7 +1005,6 @@
 .a5090114122.cdn.optimizely.com
 .a5110280405909504.cdn.optimizely.com
 .a5113954737848320.cdn.optimizely.com
-.a5132049628004352.cdn.optimizely.com
 .a5133694441095168.cdn.optimizely.com
 .a5160292989009920.cdn.optimizely.com
 .a5171550442225664.cdn.optimizely.com
@@ -1515,7 +1511,6 @@
 .ads-img.mozilla.org
 .ads-jp.tiktok.com
 .ads-marketing-vivofs.vivo.com.cn
-.ads-meta-logo.s3.amazonaws.com
 .ads-monitoring.papegames.com
 .ads-privacy-api.prd.mz.internal.unity3d.com
 .ads-prod-narrowcasting.s3.us-west-2.amazonaws.com
@@ -2433,7 +2428,6 @@
 .assistjs.skimresources.com
 .assp.sohu.com
 .astat-bugly-tgw4l.mig.tencent-cloud.net
-.astellasusllc.data.adobedc.net
 .at.pinduoduo.com
 .at3.doubanio.com
 .atanx.alicdn.com
@@ -2563,6 +2557,7 @@
 .beacon.guim.co.uk
 .beacon.my.salesforce.com
 .beacon.netflix.com
+.beacon.playback.api.brightcove.com
 .beacon.qq.com
 .beacon.riskified.com
 .beacon.shazam.com
@@ -2961,6 +2956,7 @@
 .cimb.data.adobedc.net
 .cir-smart.baidu.com
 .cirrus-full-snapshots-track-csv-v1-0-eu-prod.s3.eu-west-1.amazonaws.com
+.cis.sohu.com
 .citrixanalyticseh-alias.servicebus.windows.net
 .citrixanalyticseh.servicebus.windows.net
 .citrixanalyticseh2-alias.servicebus.windows.net
@@ -3062,6 +3058,7 @@
 .cmp-consent-tool.privacymanager.io
 .cmp-vendors.privacymanager.io
 .cmp.osano.com
+.cmp.setupcmp.com
 .cmp.springer.com
 .cmp.springernature.com
 .cms.tanx.com
@@ -3129,11 +3126,9 @@
 .collector-px1azz2fhj.px-cloud.net
 .collector-px1ct9c6g3.px-cloud.net
 .collector-px1m6q11bc.px-cloud.net
-.collector-px1p77x9q9.px-cloud.net
 .collector-px1qo90wtr.px-cloud.net
 .collector-px1uglztko.px-cloud.net
 .collector-px1wqvvfc0.px-cloud.net
-.collector-px224mpq48.px-cloud.net
 .collector-px24c5soup.px-cloud.net
 .collector-px27m703hm.px-cloud.net
 .collector-px2bubkzbv.px-cdn.net
@@ -3141,6 +3136,7 @@
 .collector-px2e972lwz.px-cdn.net
 .collector-px2e972lwz.px-cloud.net
 .collector-px2sz8xyop.px-cloud.net
+.collector-px2yes24ut.px-cdn.net
 .collector-px2yes24ut.px-cloud.net
 .collector-px35v5ygcp.px-cloud.net
 .collector-px3c3ez9ug.px-cloud.net
@@ -3216,7 +3212,6 @@
 .collector-pxajdckzhd.px-cloud.net
 .collector-pxaoit9cn0.px-cloud.net
 .collector-pxaotqiwnf.px-cloud.net
-.collector-pxaqpjjt3x.px-cloud.net
 .collector-pxawqdobrw.px-cloud.net
 .collector-pxb47t2jmz.px-cloud.net
 .collector-pxb5ezgwhw.px-cloud.net
@@ -3244,7 +3239,9 @@
 .collector-pxdoe5cht3.px-cloud.net
 .collector-pxdojv695v.px-cloud.net
 .collector-pxdtszcz83.px-cloud.net
+.collector-pxdutzfcoj.px-cdn.net
 .collector-pxdutzfcoj.px-cloud.net
+.collector-pxdutzfcoj.pxchk.net
 .collector-pxe8b8e9vd.px-cloud.net
 .collector-pxe97yvc0a.px-cloud.net
 .collector-pxebumdlwe.px-cdn.net
@@ -3364,6 +3361,7 @@
 .collector-pxm0ea3jx0.px-cloud.net
 .collector-pxm6kav5mu.px-cdn.net
 .collector-pxm6kav5mu.px-cloud.net
+.collector-pxm6kav5mu.pxchk.net
 .collector-pxmfiffa8l.px-cdn.net
 .collector-pxmfiffa8l.px-cloud.net
 .collector-pxmk388tc2.px-cloud.net
@@ -3372,7 +3370,6 @@
 .collector-pxn6kwgy36.px-cloud.net
 .collector-pxn8anl15k.px-cloud.net
 .collector-pxnazkg1pi.px-cloud.net
-.collector-pxnd6ad9ch.px-cloud.net
 .collector-pxnddshz8n.px-cloud.net
 .collector-pxnelrpptk.px-cloud.net
 .collector-pxneog4e2e.px-cloud.net
@@ -3512,7 +3509,6 @@
 .collector-pxxt4gy2ig.px-cloud.net
 .collector-pxxtfdm2w9.px-cloud.net
 .collector-pxxyzdn30m.px-cloud.net
-.collector-pxyach2hjb.px-cloud.net
 .collector-pxyirejba7.px-cloud.net
 .collector-pxyjwbujsx.px-cloud.net
 .collector-pxyo6yjwlb.px-cloud.net
@@ -3545,6 +3541,7 @@
 .collector.bsg.bravesoftware.com
 .collector.dcdn.baidu.com
 .collector.github.com
+.collector.polarr.co
 .collector.snowplow.supercell.com
 .collector.superwall.me
 .collector.unsplash.com
@@ -5024,6 +5021,7 @@
 .d3e8xvf8dyclkj.cloudfront.net
 .d3ea0dyj1ehgcr.cloudfront.net
 .d3ec0pbimicc4r.cloudfront.net
+.d3edfxwiftnsxy.cloudfront.net
 .d3edizycpjjo07.cloudfront.net
 .d3efeah7vk80fy.cloudfront.net
 .d3ej838ds58re9.cloudfront.net
@@ -5394,6 +5392,7 @@
 .data-reporting.agora.io
 .data-saver-cindi.herokuapp.com
 .data-tracker-43ai52v45a-ew.a.run.app
+.data.a.fanaticscommerce.com.data.adobedc.net
 .data.aem-showcase-internal.adobe.com
 .data.aem-sites-internal.adobe.com
 .data.b2bmail.adobe.com
@@ -5403,7 +5402,6 @@
 .data.corp.unity3d.com
 .data.customer-success-apac.adobe.com
 .data.diagnostics.office.com
-.data.digital.adobe.com
 .data.dm.casio.com.data.adobedc.net
 .data.dm.casio.info.data.adobedc.net
 .data.e.adobe.com
@@ -5827,6 +5825,7 @@
 .doubleverify.com
 .doubleverify.com.cdn.cloudflare.net
 .doug1izaerwt3.cloudfront.net
+.douglas.pl.data.adobedc.net
 .dove.xueqiu.com
 .download-stats.mozilla.org
 .download-stats.r53-2.services.mozilla.com
@@ -6055,6 +6054,7 @@
 .e045f561.b-cdn.net
 .e1.o.lencr.org
 .e20d8e38992b.o3n.io
+.e2vxrhuc3k.data.adobedc.net
 .e77lmzbqou0n-a.akamaihd.net
 .e8u2tnpszf.data.adobedc.net
 .earth.cointelegraph.com
@@ -6112,6 +6112,7 @@
 .email.realmadrid.com.data.adobedc.net
 .email.social.qualtrics.com
 .emarketing.sina.com.cn
+.embed.polymarket.com
 .embeds.beehiiv.com
 .embrlabs-web-server-side-tagging-p3bzxsa3oa-uc.a.run.app
 .emdcadvertise.eastmoney.com
@@ -6311,7 +6312,6 @@
 .familygiftlove.myshopify.com
 .famousfootwear.com.data.adobedc.net
 .fanatics.com.data.adobedc.net
-.fanaticscommerce.com.data.adobedc.net
 .fans.m.tmall.com
 .fantastic-salamander-c721cb.netlify.app
 .fantuan.bz.mgtv.com
@@ -6585,7 +6585,6 @@
 .geo.vortex.data.microsoft.com.akadns.net
 .geo.yahoo.com
 .geo2.adobe.com
-.geoapi123.appspot.com
 .geobeacon.ign.com
 .geoedge.be
 .geolocation.forbes.com
@@ -6768,7 +6767,6 @@
 .h5collector.mihoyo.com
 .h5log-api-dualstack.mihoyo.com
 .h6.msn.com
-.h6uzemwry4.data.adobedc.net
 .haa3j9plpi-default-cn.rum.aliyuncs.com
 .haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
@@ -6933,7 +6931,6 @@
 .hpd.baidu.com
 .hpjy-report.tga.qq.com
 .hpplay.cn
-.hq-tracking.qq.com
 .hreport.meituan.com
 .hs-analytics.net
 .hs-scripts.com
@@ -7156,6 +7153,7 @@
 .impactradius-event.com
 .impression-tracker-service-5eimuebuhq-lz.a.run.app
 .impressions-ico-eu.b-cdn.net
+.impressions.onelink.me
 .improving.duckduckgo.com
 .imtt.dd.qq.com
 .in-ad-mkt-vivofs.vivoglobal.com
@@ -7312,6 +7310,7 @@
 .ivkpkdxs6q.data.adobedc.net
 .ivy.pconline.com.cn
 .ivypacfdyy.data.adobedc.net
+.iwad.cachefly.net
 .iwallet-1258175138.file.myqcloud.com
 .iwan-s.video.qq.com
 .iwan.sogou.com
@@ -7760,6 +7759,7 @@
 .log32-normal-zr.tiktokv.com
 .log32-normal.capcutapi.com
 .log32-normal.tiktokv.com
+.log5-applog-hl.zijieapi.com
 .log5-applog-lf.zijieapi.com
 .log5-applog.zijieapi.com
 .log5-misc-hl.amemv.com
@@ -7924,6 +7924,7 @@
 .luna-aggregated-metrics-prod.s3.amazonaws.com
 .lupic.cdn.bcebos.com
 .lvip.youku.com
+.lvm5ybt1fm.data.adobedc.net
 .lx0.meituan.com
 .lxcdn.dl.files.xiaomi.net
 .lycamobileuklimited.data.adobedc.net
@@ -8430,6 +8431,7 @@
 .nano-game-ad-slot.oss-cn-hongkong.aliyuncs.com
 .napaprolink.com.data.adobedc.net
 .napi.ucweb.com
+.nationalbankofcanada.data.adobedc.net
 .nationalemaatschappijderbelgischespoorwegen.data.adobedc.net
 .nativead.s3.amazonaws.com
 .nativeapp.toutiao.com
@@ -8461,6 +8463,7 @@
 .newkste05836.s3.amazonaws.com
 .newkste4a144.s3.amazonaws.com
 .newlog.reader.qq.com
+.newormedia.com
 .newrelic.com
 .newrelic.com.cdn.cloudflare.net
 .news-abroad.vivo.com
@@ -9379,12 +9382,14 @@
 .rfihub.com.akadns.net
 .rg-3tn.pages.dev
 .rh.qq.com
+.rhcvuy2die.data.adobedc.net
 .rhdc-acs.youku.com
 .rich.qq.com
 .richaudience.com
 .richmedia.video.qq.com
 .richmedia.yimg.com
 .rics.data.adobedc.net
+.rightmessage.com
 .riqhisfus.com
 .riskct.geetest.com
 .riskpoc.trip.com
@@ -9925,8 +9930,6 @@
 .server-side-tagging-833949469797.us-central1.run.app
 .server-side-tagging-846695342379.asia-northeast1.run.app
 .server-side-tagging-922531518864.us-central1.run.app
-.server-side-tagging-938208429501.us-west2.run.app
-.server-side-tagging-965440604880.europe-west1.run.app
 .server-side-tagging-98424044405.europe-west1.run.app
 .server-side-tagging-a2q5zdr5na-uc.a.run.app
 .server-side-tagging-a4s6lk5yka-uc.a.run.app
@@ -9936,7 +9939,6 @@
 .server-side-tagging-acih5gtfgq-uc.a.run.app
 .server-side-tagging-aetyeub57a-uc.a.run.app
 .server-side-tagging-agl2jup2aa-uc.a.run.app
-.server-side-tagging-agrgoampdq-uc.a.run.app
 .server-side-tagging-aikuysmm4a-uc.a.run.app
 .server-side-tagging-airo4znvnq-uc.a.run.app
 .server-side-tagging-ajszjymjga-uc.a.run.app
@@ -10005,7 +10007,6 @@
 .server-side-tagging-eu-5hbdeusn7q-ez.a.run.app
 .server-side-tagging-eu-7twoo26kcq-ew.a.run.app
 .server-side-tagging-eu-m4kh6mjypa-nw.a.run.app
-.server-side-tagging-eu-noroh2unha-ez.a.run.app
 .server-side-tagging-eu-production-925055733921.europe-west1.run.app
 .server-side-tagging-eu-ziicfw44ia-oc.a.run.app
 .server-side-tagging-europe-qvautbez2a-ew.a.run.app
@@ -10028,7 +10029,6 @@
 .server-side-tagging-fhwgfw3fiq-uc.a.run.app
 .server-side-tagging-fjallraven-ipe62hiwta-ew.a.run.app
 .server-side-tagging-fmd7ibkj2q-uc.a.run.app
-.server-side-tagging-fn5ng6n2ka-uc.a.run.app
 .server-side-tagging-fpze4punyq-uc.a.run.app
 .server-side-tagging-fqu3nt7xsa-uc.a.run.app
 .server-side-tagging-frd4rkhtqq-uc.a.run.app
@@ -10064,7 +10064,6 @@
 .server-side-tagging-hangnitwaa-uc.a.run.app
 .server-side-tagging-hayzpmf72a-uc.a.run.app
 .server-side-tagging-hddrfyouaa-uc.a.run.app
-.server-side-tagging-hdsbbjsfma-uc.a.run.app
 .server-side-tagging-he3u4nhsuq-uc.a.run.app
 .server-side-tagging-hezmbyn5ka-uc.a.run.app
 .server-side-tagging-hflvsypeyq-uc.a.run.app
@@ -10438,7 +10437,6 @@
 .sg2p.wns.windows.com
 .sgali-mcs.byteoversea.com
 .sgaws-mcs.byteoversea.com
-.sgb8lk0jxu.data.adobedc.net
 .sgee-log.byteoversea.com
 .sgee-mcs.byteoversea.com
 .sgg.southcn.com
@@ -10822,6 +10820,7 @@
 .store.tv.api.3g.youku.com
 .store.xiaohongshu.com
 .store.xl.api.3g.youku.com
+.stpd.cloud
 .str2-bbyca-track.bestbuy.com
 .str2-fsca-track.bestbuy.com
 .stracking.rogers.com
@@ -10987,6 +10986,7 @@
 .targeting.tgam.arcpublishing.com
 .targeting.tronc.arcpublishing.com
 .targetlr.adobe.com
+.tarrantcounty.com.data.adobedc.net
 .tartannewzealand.myshopify.com
 .tat.pandora.xiaomi.com
 .tatacapital.data.adobedc.net
@@ -11091,6 +11091,7 @@
 .theta.sogou.com
 .theta.sogoucdn.com
 .theweathercompany.data.adobedc.net
+.thisiswaldo.com
 .thm.market.xiaomi.com
 .threeie.data.adobedc.net
 .thza4ecrjb.data.adobedc.net
@@ -11464,6 +11465,7 @@
 .ulic.baidu.com
 .ulink.cc.163.com
 .ulog-sdk.gifshow.com
+.ulog-sdk.ksapisrv.com
 .ulog.gifshow.com
 .ulog.imap.baidu.com
 .ulog.ksapisrv.com
@@ -11681,7 +11683,6 @@
 .vas-lf-x.snssdk.com
 .vatrack.hinet.net
 .vbc-telemetry-prod.s3.amazonaws.com
-.vbgdbyy9w7.data.adobedc.net
 .vbzxsg2ebt.data.adobedc.net
 .vc-server-side-tagging-tgro3cz6fq-nw.a.run.app
 .vcardsdkservice.vivo.com.cn
@@ -11719,6 +11720,7 @@
 .vi.xiaohongshu.com
 .via.intercom.io
 .viagra-pill.blogspot.com
+.vidazoo.com
 .video-ad.sm.cn
 .video-analytics-api.cloudinary.com
 .video-analytics.one-98d.workers.dev
@@ -11739,7 +11741,6 @@
 .vilaghelyzete.blogspot.com
 .vip-api.xmpush.global.xiaomi.com
 .virusinfo-cloudscan-cn.heytapmobi.com
-.viruswarning0107usxtgydw.z13.web.core.windows.net
 .viruswarning0108us4rnynv.z13.web.core.windows.net
 .viruswarning0108usf4ddlk.z13.web.core.windows.net
 .viruswarning0108ust0dy2x.z13.web.core.windows.net
@@ -11922,6 +11923,7 @@
 .wixlabs-adsense-v3.uc.r.appspot.com
 .wkclick.baidu.com
 .wkctj.baidu.com
+.wkkpxr7e2l.data.adobedc.net
 .wklwyt.springer.com
 .wknd.ai
 .wl.hd.sohu.com
@@ -12135,6 +12137,7 @@
 .zhishituanyuanji.cdn.bcebos.com
 .zhizi.qq.com
 .zhstatic.zhihu.com
+.zhugeio.com
 .zhuti.xiaomi.com
 .zjptg.com
 .zmetrics.msn.com
@@ -12283,3 +12286,4 @@ wolong-dsp.sm.cn
 xs.gdt.qq.com
 yk-ssp.ad.youku.com
 ys.da.mgtv.com
+zgsdk.zhugeio.com
