--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-11 09:03:03
-# Total rules: 12286
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-11 21:32:58
+# Total rules: 12310
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -1188,6 +1188,7 @@
 .ac1.dcloud.net.cn
 .ac2.msn.com
 .ac3.msn.com
+.ac9olrggo8-default-cn.rum.aliyuncs.com
 .academy.com.data.adobedc.net
 .access-lgin-trzor.pages.dev
 .access-loggn-trezr.weebly.com
@@ -3509,6 +3510,7 @@
 .collector-pxxt4gy2ig.px-cloud.net
 .collector-pxxtfdm2w9.px-cloud.net
 .collector-pxxyzdn30m.px-cloud.net
+.collector-pxyach2hjb.px-cloud.net
 .collector-pxyirejba7.px-cloud.net
 .collector-pxyjwbujsx.px-cloud.net
 .collector-pxyo6yjwlb.px-cloud.net
@@ -4108,6 +4110,7 @@
 .d1mikxzr3lp4va.cloudfront.net
 .d1miuq6afqay8u.cloudfront.net
 .d1miwkthq39xj8.cloudfront.net
+.d1mkq4fbm7j30i.cloudfront.net
 .d1mob6w0cdx3a7.cloudfront.net
 .d1mroptkfdxko5.cloudfront.net
 .d1mub3aw743hsf.cloudfront.net
@@ -5392,7 +5395,6 @@
 .data-reporting.agora.io
 .data-saver-cindi.herokuapp.com
 .data-tracker-43ai52v45a-ew.a.run.app
-.data.a.fanaticscommerce.com.data.adobedc.net
 .data.aem-showcase-internal.adobe.com
 .data.aem-sites-internal.adobe.com
 .data.b2bmail.adobe.com
@@ -6016,6 +6018,7 @@
 .dymwsh1c2kslr.cloudfront.net
 .dyn.wps.cn
 .dynamic.zol.com.cn
+.dynsrv.wps.cn
 .dyodrs1kxvg6o.cloudfront.net
 .dyrfxuvraq0fk.cloudfront.net
 .dysuze6ljcmcr.cloudfront.net
@@ -6312,6 +6315,7 @@
 .familygiftlove.myshopify.com
 .famousfootwear.com.data.adobedc.net
 .fanatics.com.data.adobedc.net
+.fanaticscommerce.com.data.adobedc.net
 .fans.m.tmall.com
 .fantastic-salamander-c721cb.netlify.app
 .fantuan.bz.mgtv.com
@@ -6931,6 +6935,7 @@
 .hpd.baidu.com
 .hpjy-report.tga.qq.com
 .hpplay.cn
+.hq-tracking.qq.com
 .hreport.meituan.com
 .hs-analytics.net
 .hs-scripts.com
@@ -7799,6 +7804,15 @@
 .login.optimizely.com
 .logitech.com.data.adobedc.net
 .logn-trezr-account.weebly.com
+.logs-1.algolia.com
+.logs-2.algolia.com
+.logs-3.algolia.com
+.logs-4.algolia.com
+.logs-5.algolia.com
+.logs-6.algolia.com
+.logs-7.algolia.com
+.logs-8.algolia.com
+.logs-9.algolia.com
 .logs.amap.com
 .logs.appsource.microsoft.com
 .logs.betterstack.com
@@ -8980,6 +8994,7 @@
 .player-telemetry.vimeo.com
 .playgap.b-cdn.net
 .plbusiness.samsung.com
+.plitch-matomo.westeurope.cloudapp.azure.com
 .pllzzunegk.data.adobedc.net
 .plog.xbp.io.cdn.cloudflare.net
 .pls.prd.mz.internal.unity3d.com
@@ -9009,6 +9024,7 @@
 .policy.video.iqiyi.com
 .policycenter-auth-check.vercel.app
 .polish-money-matters.blogspot.com
+.polls.services.disqus.com
 .polyfill.io
 .popcashjs.b-cdn.net
 .popme.163.com
@@ -9022,6 +9038,7 @@
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
 .posthog.com
+.posthog.my.salesforce.com
 .posthog.substack.com
 .postrelease.com
 .postreport.meituan.com
@@ -9295,6 +9312,7 @@
 .read.medium.com
 .reader.sh.vip.qq.com
 .reading-lq.snssdk.com
+.readmo.yahoo.com
 .readserver.cachefly.net
 .rec5.visualwebsiteoptimizer.com
 .recipe-tracker-cno2ebznoq-uc.a.run.app
@@ -9730,6 +9748,7 @@
 .security-lq.snssdk.com
 .security.snssdk.com
 .securityzones.blob.core.windows.net
+.sedo.cachefly.net
 .seedapp-creative.s3.amazonaws.com
 .seedtag.com
 .segapi.whop.com
@@ -9758,6 +9777,7 @@
 .sentry.bits-363.workers.dev
 .sentry.cointelegraph.com
 .sentry.csdn.net
+.sentry.d.mi.com
 .sentry.d.xiaomi.net
 .sentry.freepik.com
 .sentry.gitcode.com
@@ -9774,6 +9794,7 @@
 .sentry.netease.com
 .sentry.olkai.outlook.com
 .sentry.pay.xiaomi.com
+.sentry.prod.ops.butterfly-effect.dev
 .sentry.qt.qq.com
 .sentry.ruguoapp.com
 .sentry.spribe.io.cdn.cloudflare.net
@@ -10290,6 +10311,7 @@
 .server-side-tagging-ssv4waagvq-uc.a.run.app
 .server-side-tagging-sw5m3dx77a-uc.a.run.app
 .server-side-tagging-syuqaofd7q-uc.a.run.app
+.server-side-tagging-sznt3iolpq-uc.a.run.app
 .server-side-tagging-t22nqfy7nq-uc.a.run.app
 .server-side-tagging-t2acboispq-ez.a.run.app
 .server-side-tagging-t5aedvj2ua-uc.a.run.app
@@ -11738,6 +11760,7 @@
 .view.zijieapi.com
 .views.hulu.com.akadns.net
 .viglink.com
+.viking.com.data.adobedc.net
 .vilaghelyzete.blogspot.com
 .vip-api.xmpush.global.xiaomi.com
 .virusinfo-cloudscan-cn.heytapmobi.com
@@ -12110,6 +12133,7 @@
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
 .yt-adv.bn.netease.com
+.ytstatic.l.google.com
 .yuedu.iqiyi.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
