--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-11 21:32:58
-# Total rules: 12310
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-12 10:09:45
+# Total rules: 12255
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -29,7 +29,6 @@
 .1675450967.rsc.cdn77.org
 .1991482557.rsc.cdn77.org
 .1hlahoc4rpc-sdk.rum.aliyuncs.com
-.1jk5qcsjzo.data.adobedc.net
 .1l-hit.mail.ru
 .1l-view.mail.ru
 .1oavsblobprodcus350.blob.core.windows.net
@@ -778,7 +777,6 @@
 .a2659630112.cdn.optimizely.com
 .a26600840246.cdn.optimizely.com
 .a26604040285.cdn.optimizely.com
-.a26610380842.cdn.optimizely.com
 .a2665520353.cdn.optimizely.com
 .a26669750187.cdn.optimizely.com
 .a26692680197.cdn.optimizely.com
@@ -1005,14 +1003,12 @@
 .a5090114122.cdn.optimizely.com
 .a5110280405909504.cdn.optimizely.com
 .a5113954737848320.cdn.optimizely.com
-.a5133694441095168.cdn.optimizely.com
 .a5160292989009920.cdn.optimizely.com
 .a5171550442225664.cdn.optimizely.com
 .a5173948275490816.cdn.optimizely.com
 .a523170811.cdn.optimizely.com
 .a524690941.cdn.optimizely.com
 .a5250744593416192.cdn.optimizely.com
-.a5263375337259008.cdn.optimizely.com
 .a5270536083734528.cdn.optimizely.com
 .a5271073.cdn.optimizely.com
 .a5292374380249088.cdn.optimizely.com
@@ -1050,7 +1046,6 @@
 .a5809436334227456.cdn.optimizely.com
 .a582891733.cdn.optimizely.com
 .a5838709522694144.cdn.optimizely.com
-.a5839278056407040.cdn.optimizely.com
 .a5877482797137920.cdn.optimizely.com
 .a591102174.cdn.optimizely.com
 .a5935064.cdn.optimizely.com
@@ -1066,7 +1061,6 @@
 .a61135178.cdn.optimizely.com
 .a6131884851.cdn.optimizely.com
 .a6136581106.cdn.optimizely.com
-.a6147442509348864.cdn.optimizely.com
 .a6147784059912192.cdn.optimizely.com
 .a6169963916951552.cdn.optimizely.com
 .a6194110778.cdn.optimizely.com
@@ -1076,10 +1070,8 @@
 .a6263502310998016.cdn.optimizely.com
 .a627150995.cdn.optimizely.com
 .a6295702960078848.cdn.optimizely.com
-.a6303072515784704.cdn.optimizely.com
 .a6372928330137600.cdn.optimizely.com
 .a6376052200046592.cdn.optimizely.com
-.a6403762990874624.cdn.optimizely.com
 .a6451678757519360.cdn.optimizely.com
 .a6502622515.cdn.optimizely.com
 .a6504733288955904.cdn.optimizely.com
@@ -1196,7 +1188,6 @@
 .access-trerz-io-en.pages.dev
 .access-trezz-io-en.pages.dev
 .accountconfirm-managerpage-requestreview-verifynow.pages.dev
-.accredo.com.data.adobedc.net
 .accscdn.m.taobao.com
 .ace.naver.com
 .acfeedbackws.icloud.com
@@ -1885,10 +1876,8 @@
 .alitui.weibo.com
 .aliunion.cn.yahoo.com
 .aliyaoberbrunnergreg21.myshopify.com
-.alliancedata.data.adobedc.net
 .ally.data.adobedc.net
 .alphaupsell.s3.ap-northeast-2.amazonaws.com
-.alpwiijq5x.data.adobedc.net
 .als-svc.nytimes.com
 .alt-ad.mail.ru
 .alterramountaincompany.data.adobedc.net
@@ -2080,7 +2069,6 @@
 .analytics.umami.is
 .analytics.umetrip.com
 .analytics.unity3d.com
-.analytics.us.algolia.com
 .analytics.us.archive.org
 .analytics.us.tiktok.com
 .analytics.us.umami.is
@@ -2525,7 +2513,6 @@
 .bbangads.b-cdn.net
 .bc-ad-vod.zdmimg.com
 .bc.qunar.com
-.bcbsks.data.adobedc.net
 .bcd.caiyunapp.com
 .bcdn-dbff2e04.we-stats.com
 .bcdn-god.we-stats.com
@@ -2845,7 +2832,6 @@
 .cast.imp.joins.com
 .castatic.fengkongcloud.com
 .catalog.video.msn.com
-.caterpillarsigns.data.adobedc.net
 .cathaypacific.data.adobedc.net
 .cb.baidu.com
 .cba.data.adobedc.net
@@ -2906,7 +2892,6 @@
 .cdp.cloud.unity3d.com
 .ced-ns.sascdn.com
 .ced.sascdn.com
-.cedarssinaimedicalcenter.data.adobedc.net
 .celtra.com
 .centene.com.data.adobedc.net
 .centene.data.adobedc.net
@@ -2921,7 +2906,6 @@
 .cgi.connect.qq.com
 .cgi.pub.qq.com
 .cgicol.amap.com
-.cgpsx3qhmo.data.adobedc.net
 .champagne.futurecdn.net
 .changyan.sohu.com
 .channel-analysis-js.gmw.cn
@@ -2935,7 +2919,6 @@
 .chartbeat.net
 .chat.global.xiaomi.net
 .chat.voice-datings.workers.dev
-.chat.z.ai
 .chat1.jd.com
 .chatapp-6b96e-default-rtdb.firebaseio.com
 .chatenabled.mail.google.com
@@ -3137,7 +3120,6 @@
 .collector-px2e972lwz.px-cdn.net
 .collector-px2e972lwz.px-cloud.net
 .collector-px2sz8xyop.px-cloud.net
-.collector-px2yes24ut.px-cdn.net
 .collector-px2yes24ut.px-cloud.net
 .collector-px35v5ygcp.px-cloud.net
 .collector-px3c3ez9ug.px-cloud.net
@@ -3155,7 +3137,6 @@
 .collector-px46uwk7he.px-cloud.net
 .collector-px4i06uv8m.px-cloud.net
 .collector-px4iknbf6x.px-cloud.net
-.collector-px4oaqzwak.px-cloud.net
 .collector-px4uazuiai.px-cloud.net
 .collector-px4vmagn4o.px-cloud.net
 .collector-px551mn3nq.px-cloud.net
@@ -3190,7 +3171,6 @@
 .collector-px87wpo5ak.px-cloud.net
 .collector-px8fcgygk4.px-cloud.net
 .collector-px8fu47ke5.px-cloud.net
-.collector-px8g6jeeev.px-cloud.net
 .collector-px8suhxpnm.px-cloud.net
 .collector-px8t5akzsq.px-cloud.net
 .collector-px8zofp9vf.px-cdn.net
@@ -3267,7 +3247,6 @@
 .collector-pxgeyljesk.px-cdn.net
 .collector-pxgeyljesk.px-cloud.net
 .collector-pxgeyljesk.pxchk.net
-.collector-pxghenmjv3.px-cloud.net
 .collector-pxghzdhy7f.px-cloud.net
 .collector-pxglfzcgpa.px-cloud.net
 .collector-pxgm4fv3vc.px-cloud.net
@@ -3340,7 +3319,6 @@
 .collector-pxkknkrjgu.pxchk.net
 .collector-pxkm4nwu16.px-cloud.net
 .collector-pxkogoppbz.px-cloud.net
-.collector-pxkoyq37gh.px-cloud.net
 .collector-pxkp4clsb5.px-cloud.net
 .collector-pxktmrtopw.px-cdn.net
 .collector-pxktmrtopw.px-cloud.net
@@ -3349,7 +3327,6 @@
 .collector-pxkz8zzqmw.px-cloud.net
 .collector-pxl3efeja7.px-cloud.net
 .collector-pxlb0vny7w.px-cloud.net
-.collector-pxlcfmkcuv.px-cloud.net
 .collector-pxldlac4jd.px-cloud.net
 .collector-pxldm3ddsw.px-cdn.net
 .collector-pxldm3ddsw.px-cloud.net
@@ -3406,20 +3383,16 @@
 .collector-pxpftaypj9.px-cloud.net
 .collector-pxpjrhlr4n.px-cloud.net
 .collector-pxpmq1d3fb.px-cloud.net
-.collector-pxpo11g9ah.px-cloud.net
 .collector-pxpoll8wvh.px-cloud.net
 .collector-pxpum5xzzw.px-cdn.net
 .collector-pxpum5xzzw.px-cloud.net
 .collector-pxpvnjmp4g.px-cdn.net
 .collector-pxpvnjmp4g.px-cloud.net
 .collector-pxpvnjmp4g.pxchk.net
-.collector-pxpx6fss1c.px-cloud.net
 .collector-pxq99aloxk.px-cloud.net
 .collector-pxqerrwgji.px-cloud.net
 .collector-pxqm4ecyhh.px-cloud.net
-.collector-pxqpjkmj2n.px-cloud.net
 .collector-pxqqxm841a.px-cloud.net
-.collector-pxqxgkwycg.px-cloud.net
 .collector-pxqxtwmr91.px-cloud.net
 .collector-pxr3pnvz1f.px-cloud.net
 .collector-pxr424oqs0.px-cloud.net
@@ -3442,7 +3415,6 @@
 .collector-pxsmtpgl4l.px-cdn.net
 .collector-pxsmtpgl4l.px-cloud.net
 .collector-pxsp9yp3kw.px-cloud.net
-.collector-pxspn2silb.px-cloud.net
 .collector-pxsw1vemrh.px-cdn.net
 .collector-pxsw1vemrh.px-cloud.net
 .collector-pxsw1vemrh.pxchk.net
@@ -3569,7 +3541,6 @@
 .concert.io
 .concertads-configs.vox-cdn.com
 .conde.digital
-.conduenttransportsolutionsinc.data.adobedc.net
 .conf-cn.dc.heytapmobi.com
 .conf-eu.dc.heytapmobi.com
 .conf-in.dc.heytapmobi.com
@@ -5286,7 +5257,6 @@
 .d4bx2if8xmi89.cloudfront.net
 .d4ebx5h0p80bx.cloudfront.net
 .d4eqyxjqusvjj.cloudfront.net
-.d4kbs05hwu.data.adobedc.net
 .d4ngwggzm3w7j.cloudfront.net
 .d5.sina.com.cn
 .d58y3i8g62axh.cloudfront.net
@@ -5426,6 +5396,7 @@
 .data.messaging.paypal.com
 .data.msn.com
 .data.news.paypal.com
+.data.news.paypal.com.data.adobedc.net
 .data.newsletter.paypal.com
 .data.pendo.io
 .data.qq.com
@@ -5681,7 +5652,6 @@
 .djv99sxoqpv11.cloudfront.net
 .djvby0s5wa7p7.cloudfront.net
 .djwf0dl2q9i99.cloudfront.net
-.djxzp32zyq.data.adobedc.net
 .djz9es32qen64.cloudfront.net
 .dk45agakx3yfl.cloudfront.net
 .dk4w74mt6naf3.cloudfront.net
@@ -5851,7 +5821,6 @@
 .dp94m8xzwqsjk.cloudfront.net
 .dpb3g4kqr8xz.cloudfront.net
 .dpd9yiocsyy6p.cloudfront.net
-.dpdhb75zux.data.adobedc.net
 .dpeqm8xv96fuc.cloudfront.net
 .dpg-ads-banners-prod-5cbbeba4.s3-eu-west-1.amazonaws.com
 .dpi.networkorder.komect.com
@@ -6115,7 +6084,6 @@
 .email.realmadrid.com.data.adobedc.net
 .email.social.qualtrics.com
 .emarketing.sina.com.cn
-.embed.polymarket.com
 .embeds.beehiiv.com
 .embrlabs-web-server-side-tagging-p3bzxsa3oa-uc.a.run.app
 .emdcadvertise.eastmoney.com
@@ -6132,7 +6100,6 @@
 .energyaustralia.data.adobedc.net
 .engagement-metrics-dpzmkkxlza-uc.a.run.app
 .engsuites.ghost.io
-.enova.data.adobedc.net
 .enrichgw.10010.com
 .ensighten.bhphoto.com
 .ensighten.com
@@ -6310,7 +6277,6 @@
 .facebook-google-vptyyny63pwfipshmm.vercel.app
 .facebook-google-ygggvmvciad74v9lhi.vercel.app
 .fair.sogou.com
-.falabella.com.data.adobedc.net
 .falabella.data.adobedc.net
 .familygiftlove.myshopify.com
 .famousfootwear.com.data.adobedc.net
@@ -7082,7 +7048,6 @@
 .igcum80w74.data.adobedc.net
 .igexin.com
 .iha-analytics.vercel.app
-.iix5saebir.data.adobedc.net
 .ikcart.alipay.com
 .ikcode.baidu.com
 .ilce.alicdn.com
@@ -7416,7 +7381,6 @@
 .kde.qq.com
 .kepler.jd.com
 .keplerapi.jd.com
-.kew3pculob.data.adobedc.net
 .key.com.data.adobedc.net
 .keyrotate.qq.com
 .kgb-ifs.tanx.com
@@ -7819,14 +7783,12 @@
 .logs.blip.net
 .logs.bloomberg.com
 .logs.browserstack.com
-.logs.chronosphere.io
 .logs.datadoghq.com
 .logs.douguo.net
 .logs.dradis.netflix.com
 .logs.eu-west-1.internal.dradis.netflix.com
 .logs.game.qq.com
 .logs.grayjay.app
-.logs.igslb.bloomberg.com
 .logs.n.xiaomi.com
 .logs.netflix.com
 .logs.slo.test.ds.unity3d.com
@@ -7992,7 +7954,6 @@
 .marketingweek.imgix.net
 .marphezis.com
 .mars.jd.com
-.marshandmclennan.data.adobedc.net
 .martech.condenastdigital.com
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
@@ -8006,7 +7967,6 @@
 .match.p4p.1688.com
 .matchbin-assets.s3.amazonaws.com
 .matomo-computerfloh-de.cdn.ampproject.org
-.matomo-production-313173901.us-east-2.elb.amazonaws.com
 .matomo-westnetz.germanywestcentral.cloudapp.azure.com
 .matomo-wpmudev-analytics1-925643958.us-east-2.elb.amazonaws.com
 .matomo-wpmudev-analytics2-742601353.us-east-2.elb.amazonaws.com
@@ -8445,7 +8405,6 @@
 .nano-game-ad-slot.oss-cn-hongkong.aliyuncs.com
 .napaprolink.com.data.adobedc.net
 .napi.ucweb.com
-.nationalbankofcanada.data.adobedc.net
 .nationalemaatschappijderbelgischespoorwegen.data.adobedc.net
 .nativead.s3.amazonaws.com
 .nativeapp.toutiao.com
@@ -8485,7 +8444,6 @@
 .news-events.apple.com
 .news-notification-events.apple.com
 .news-sports-events.apple.com
-.news.paypal.com.data.adobedc.net
 .newspush.sinajs.cn
 .newtest.wunderman-email.cjm.adobe.com
 .newton-api.ele.me
@@ -9400,7 +9358,6 @@
 .rfihub.com.akadns.net
 .rg-3tn.pages.dev
 .rh.qq.com
-.rhcvuy2die.data.adobedc.net
 .rhdc-acs.youku.com
 .rich.qq.com
 .richaudience.com
@@ -9967,7 +9924,6 @@
 .server-side-tagging-apfdb3qbwq-uc.a.run.app
 .server-side-tagging-aqwpviq3ba-uc.a.run.app
 .server-side-tagging-aza5ekswqa-uc.a.run.app
-.server-side-tagging-b2c2itg3wq-uc.a.run.app
 .server-side-tagging-b3vawfhz7a-uc.a.run.app
 .server-side-tagging-b4b35m77ha-uc.a.run.app
 .server-side-tagging-b6eune4xaa-uc.a.run.app
@@ -10171,7 +10127,6 @@
 .server-side-tagging-lfroe6mcoa-uc.a.run.app
 .server-side-tagging-lgicewewha-uc.a.run.app
 .server-side-tagging-lhf4py773a-uc.a.run.app
-.server-side-tagging-livx3p2vba-uc.a.run.app
 .server-side-tagging-ljd4ckkpvq-uc.a.run.app
 .server-side-tagging-lmmeqsrqaa-uc.a.run.app
 .server-side-tagging-lmpl-vrtdynr37q-lm.a.run.app
@@ -10342,7 +10297,6 @@
 .server-side-tagging-ua-ujsfw7lbrq-lm.a.run.app
 .server-side-tagging-ua2xgvgooa-uc.a.run.app
 .server-side-tagging-ucumduhz7a-uc.a.run.app
-.server-side-tagging-ucwrz57auq-uc.a.run.app
 .server-side-tagging-ue2x2yllda-uc.a.run.app
 .server-side-tagging-uf7tmkx7ga-uc.a.run.app
 .server-side-tagging-uhdgomz7ma-lm.a.run.app
@@ -10620,7 +10574,6 @@
 .sophi.io
 .sorteiosbrasil.netlify.app
 .soup.v.qq.com
-.southernco.data.adobedc.net
 .sovetnik.market.yandex.ru
 .soxnwz.lg.com
 .sp-mms.weather.com
@@ -10740,7 +10693,6 @@
 .stat.zol.com.cn
 .stat6.y.qq.com
 .statchecker.yandex.ru
-.statestreet.com.data.adobedc.net
 .static-addtoany-com.cdn.ampproject.org
 .static-doubleclick-net.l.google.com
 .static-res.qq.com
@@ -10781,7 +10733,6 @@
 .stats.economist.com
 .stats.fastcompany.com
 .stats.fifthstarlabs.io
-.stats.figshare.com
 .stats.ign.com
 .stats.kaltura.com
 .stats.kde.org
@@ -11008,7 +10959,6 @@
 .targeting.tgam.arcpublishing.com
 .targeting.tronc.arcpublishing.com
 .targetlr.adobe.com
-.tarrantcounty.com.data.adobedc.net
 .tartannewzealand.myshopify.com
 .tat.pandora.xiaomi.com
 .tatacapital.data.adobedc.net
@@ -11764,9 +11714,6 @@
 .vilaghelyzete.blogspot.com
 .vip-api.xmpush.global.xiaomi.com
 .virusinfo-cloudscan-cn.heytapmobi.com
-.viruswarning0108us4rnynv.z13.web.core.windows.net
-.viruswarning0108usf4ddlk.z13.web.core.windows.net
-.viruswarning0108ust0dy2x.z13.web.core.windows.net
 .visio-telemetry.officeapps.live.com
 .visit.webhosting.yahoo.com
 .visitor-analytics.appspot.com
@@ -11802,7 +11749,6 @@
 .vp.html5.qq.com
 .vpic.video.qq.com
 .vsblobprodscussu5shard66.blob.core.windows.net
-.vsblobprodscussu5shard82.blob.core.windows.net
 .vsh.pp.ua
 .vstat.my.tv.sohu.com
 .vstat.v.blog.sohu.com
@@ -12146,7 +12092,6 @@
 .z.m.tv.sohu.com
 .zasc-cota.vivoglobal.com
 .zasc-vcode-od.vivoglobal.com
-.zau9tq0po5.data.adobedc.net
 .zbcy.snssdk.com
 .zconfig.alibabausercontent.com
 .zconfig.alibabausercontent.com.w.cdngslb.com
