--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2026-01-21 09:50:38
-# Total rules: 12363
+# Generated from relevant_rules_wildcard_aware.txt on 2026-01-21 20:20:31
+# Total rules: 12365
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -3670,6 +3670,7 @@
 .cpull.360.cn
 .cpux.gmud.top
 .cquotient.com
+.cr-relay.com
 .cr.adobe.com
 .cr.naver.com
 .crab.baidu.com
@@ -6577,6 +6578,7 @@
 .gb.corp.163.com
 .gcapi.sy.kugou.com
 .gcemxnn1hd.data.adobedc.net
+.gcp.fasthorse.workers.dev
 .gdc.kg.qq.com
 .gdfp.gifshow.com
 .gdpr-mobile-dau-prod.privacymanager.io
